# blisp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  blisp.nix  flake.nix
.github/workflows/: build.yml
cmake/: FindLibserialport.cmake
data/: bl60x_eflash_loader.h  bl70x_eflash_loader.h  bl808_clock_para.h
images/: readme
include/: blisp.h  blisp_chip.h  blisp_easy.h  blisp_struct.h  blisp_util.h  crc.h  error_codes.h
lib/: blisp.c  blisp_easy.c  blisp_util.c  crc.c
lib/chip/: blisp_chip_bl60x.c  blisp_chip_bl61x.c  blisp_chip_bl70x.c  blisp_chip_bl808.c
src/: cmd.h  main.c
src/cmd/: write.c
tools/blisp/: CMakeLists.txt
tools/blisp/src/: cmd.h  common.c  common.h  main.c  util.c  util.h
tools/blisp/src/cmd/: iot.c  run.c  write.c
tools/blisp/src/cmd/dfu/: dfu_file.c  dfu_file.h
tools/blisp/src/cmd/dfu/tests/: Config.h.in
tools/blisp/src/file_parsers/: CMakeLists.txt  get_file_contents.c  parse_file.c  parse_file.h  parsed_firmware_file.h
tools/blisp/src/file_parsers/dfu/: dfu_crc.c  dfu_file.c  dfu_file.h
tools/blisp/src/file_parsers/dfu/tests/: CMakeLists.txt  test.dfu  test_dfu_file.cpp
tools/blisp/src/file_parsers/hex/: hex_file.c  hex_file.h
tools/blisp/src/file_parsers/hex/tests/: CMakeLists.txt  Config.h.in  test.hex  test_hex_file.cpp
